force-app/main/default/objects/Game__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>