force-app/main/default/objects/Game__c/fields/Current_Story_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Story_ID__c</fullName>
    <label>Current Story ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>