force-app/main/default/objects/Game__c/fields/Game_Key__c.field-meta.xml
<CustomField>
    <fullName>Game_Key__c</fullName>
    <formula>MID(Id, 11, 5)</formula>
    <label>Game Key</label>
    <type>Text</type>
</CustomField>