force-app/main/default/objects/Game__c/fields/Host_can_vote__c.field-meta.xml
<CustomField>
    <fullName>Host_can_vote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host can vote</label>
    <type>Checkbox</type>
</CustomField>