force-app/main/default/objects/Game__c/fields/Question_Offset__c.field-meta.xml
<CustomField>
    <fullName>Question_Offset__c</fullName>
    <label>Question Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>