force-app/main/default/objects/Game__c/fields/Show_Timer__c.field-meta.xml
<CustomField>
    <fullName>Show_Timer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Timer</label>
    <type>Checkbox</type>
</CustomField>