force-app/main/default/objects/Game__c/fields/Timer_Duration__c.field-meta.xml
<CustomField>
    <fullName>Timer_Duration__c</fullName>
    <label>Timer Duration (in seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>