force-app/main/default/objects/Game__c/fields/Timer_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timer_Timestamp__c</fullName>
    <label>Timer Timestamp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>