force-app/main/default/objects/Game__c/validationRules/Timer_Duration_is_needed_to_Show_Timer.validationRule-meta.xml
<ValidationRule>
    <fullName>Timer_Duration_is_needed_to_Show_Timer</fullName>
    <active>true</active>
    <errorConditionFormula
    >AND(Show_Timer__c, ISBLANK( Timer_Duration__c ))</errorConditionFormula>
    <errorDisplayField>Timer_Duration__c</errorDisplayField>
    <errorMessage>Please enter Timer Duration</errorMessage>
</ValidationRule>